* Made BaseGasThermoMachines (freezers and heaters) rotatables. * Added an icon for the flip verb * Integrated the flip verb in the rotation verb group

--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -254,6 +254,8 @@
           pipeDirection: South
     - type: StaticPrice
       price: 500
+    - type: Transform
+      noRot: false
 
 - type: entity
   parent: BaseGasThermoMachine
