--- a/Resources/Prototypes/Entities/Structures/Wallmounts/fire_alarm.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/fire_alarm.yml
@@ -35,7 +35,7 @@
       Warning: fire_off # shouldn't be alarming at a warning
       Danger: fire_on
       Emagged: fire_emagged
-    hideOnDepowered: [ "fireAlarmState" ]
+    hideOnDepowered: [ "fireAlarmState", "alertLayer" ]
   - type: Tag
     tags:
       - FireAlarm
@@ -54,6 +54,7 @@
       violet: fire_1
       yellow: fire_1
       delta: fire_3
+    alertLayer: "alertLayer"
   - type: UserInterface
     interfaces:
     - key: enum.WiresUiKey.Key
@@ -70,6 +71,8 @@
       map: ["fireAlarmState"]
     - state: fire_b2
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
+    - state: fire_0
+      map: ["alertLayer"]
   - type: Transform
     anchored: true
   - type: Construction
